--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h3>Hi</h3>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>H3ssan's Blog</title>
+	</head>
+	<body>
+		<h3>My GitHub's blog</h3>
+	</body>
+</html>
+
