Add left/right sections & add Animate.css [ licensed under the MIT license ].

--- a/index.html
+++ b/index.html
@@ -3,9 +3,91 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>H3ssan's Blog</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+		<style rel="stylesheet">
+			body, html {
+				margin: 0 0 0 0;
+				padding: 0 0 0 0;
+				text-decoration-style: none;
+				list-style-type: none;
+			}
+
+			.dev {
+				width: 25vw;
+				height: 100vh;
+				background-color: #2D3747;
+				padding-bottom: 10px;
+			}
+
+			.our-repo {
+				color: #8FD6F5;
+			}
+
+			.txt-center {
+				text-align: center;
+			}
+
+			.txt-color {
+				color: #69727A;
+			}
+
+			span {
+				font-size: 14px;
+				color: #F67665;
+				letter-spacing: 0.1em;
+			}
+
+			.repo-item label {
+				color: #F6DD81;
+				margin-left: 5px;
+				font-weight: bold;
+			}
+
+			.repo-item a {
+				text-decoration: none;
+				color: white;
+				font-weight: bold;
+			}
+
+			.repo-item p {
+				color: #AFECA0;
+				margin: 5px 5px 10px 20px;
+			}
+		</style>
 	</head>
 	<body>
-		<h3>My GitHub's blog</h3>
+		<header>
+			<h2 class="txt-center animated swing">My GitHub's blog</h2>
+		</header>
+							<!-- LEFT SECTION -->
+		<dev style="float: left;" class="dev animated fadeInRight">
+			<dev>
+				<h3 class="txt-center our-repo">Our Repositories</h3>
+			</dev>
+			<dev>
+				<dev class="repo-item">
+					<label>H3ssan Blog</label>
+					<span>Developer</span>
+					<a target="_blank" href="https://github.com/H3ssan/h3ssan.github.io">GitHub</a>
+					<p class="animated zoomIn">
+						H3ssan's Blogger website, still in developer
+					</p>
+				</dev>
+
+				<dev class="repo-item">
+					<label>Linux-Identifier</label>
+					<span>Beta</span>
+					<a target="_blank" href="https://github.com/H3ssan/Linux-Identifier">GitHub</a>
+					<p class="animated zoomIn">
+						A very basic tool, help lots. Linux-Identifier get information about your operating system from over places sach as ( /etc, enviroments ) and shows it in one place, one little open source tool.
+					</p>
+				</dev>
+				</dev>
+			</dev>
+		</dev>
+							<!-- RIGHT SECTION -->
+		<dev style="float: right;" class="dev animated fadeInLeft">
+			<h4 class="txt-center animated swing infinite" style="color: #8FD6F5; letter-spacing: 0.08em;">Comming Soon</h4>
+		</dev>
 	</body>
 </html>
-
